# HyperBEAM

./: .gitignore  Makefile  README.md  build.sh  default.nix  flake.nix  rebar.config  requirements.txt  setup.sh
native/dev_cc/: cc_attestation.py  main.py  pyproject.toml  test_attestation.py
native/pyrust_nn/: .gitignore  Cargo.toml  data.json  data.txt  finetune_full.py  finetuning_lora.py  inference.py  lora_to_gguf.py  model_to_gguf.py  output.txt  params.json  quant.py  requirements.txt
native/pyrust_nn/lora_adapter/: adapter_config.json
native/pyrust_nn/src/: lib.rs  main.rs  tests.rs
native/speech-to-text/: .gitignore  Cargo.toml
native/speech-to-text/src/: config.rs  lib.rs  pyscripts.rs
native/speech_to_text/: Cargo.toml  README.md
native/speech_to_text/src/: lib.rs
native/text_to_speech/: .gitignore  Cargo.toml  generator.py  models.py  run_csm.py  shell.py  test.py  test_w_utterance.py
native/text_to_speech/src/: lib.rs  tests.rs
native/wasi_nn_llama/include/: wasi_nn_llama.h  wasi_nn_nif.h
native/wasi_nn_llama/src/: wasi_nn_nif.c
restart/: .gitignore  Cargo.toml
restart/src/: main.rs
src/: dev_cc.erl  dev_private.erl  dev_router.erl  dev_speech_to_text.erl  dev_speech_to_text_nif.erl  dev_text_to_speech.erl  dev_text_to_speech_nif.erl  dev_training.erl  dev_training_nif.erl  dev_wasi_nn.erl  dev_wasi_nn_nif.erl  hb_ao.erl  hb_gateway_client.erl  hb_opts.erl
