[package]
name = "faster-whisper-rs"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Creative Coders <officialccoders@gmail.com>"]
description = "High-level rust bindings to the faster-whisper python api."
repository = "https://github.com/CodersCreative/faster-whisper-rs"
readme = "README.md"
publish = true
keywords = ["speech_to_text", "open-ai", "whisper", "faster", "stt"]
categories = ["science", "api-bindings"]

[lib]
name = "speech_to_text"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.99"
derive_builder = "0.20.0"
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
rustler = "0.36.2"